--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 .con-1 {
   margin: 70px 70px 70px 70px;
-  background-color: antiquewhite;
+  background-color: rgb(134, 124, 112);
   border-radius: 20px;
   padding-left: 50px;
   padding-top: 30px;
