--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 .con-1 {
   margin: 70px 70px 70px 70px;
-  background-color: rgb(134, 124, 112);
+  background-color: antiquewhite;
   border-radius: 20px;
   padding-left: 50px;
   padding-top: 30px;
@@ -22,4 +22,8 @@ body {
   padding-left: 10px;
   padding-top: 10px;
   border-radius: 50%;
+}
+
+.blue{
+  color: aliceblue;
 }
